kubernetes-dashboard/kubernetes-dashboard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubernetes-dashboard
  namespace: kubernetes-dashboard
  labels:
    name: kubernetes-dashboard
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/ingress.backend-protocol: "HTTP" 
spec:
  rules:
  - host: dash.minikube.url
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: kubernetes-dashboard
            port: 
              number: 80
